Refactor docs functional tests to use Java NIO
See gh-59